--- a/app/src/main/res/layout/fragment_vignette.xml
+++ b/app/src/main/res/layout/fragment_vignette.xml
@@ -10,15 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <ProgressBar-->
-<!--            android:id="@+id/actVehicleVignette_progressBar"-->
-<!--            style="?android:attr/progressBarStyle"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:indeterminate="true"-->
-<!--            android:visibility="visible"-->
-<!--            android:layout_centerHorizontal="true"-->
-<!--            android:layout_centerVertical="true" />-->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_header"
@@ -96,56 +87,18 @@
             </androidx.recyclerview.widget.RecyclerView>
         </ScrollView>
 
+
     </RelativeLayout>
 
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/constraintlayout_main_vignette"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
-<!--        <LinearLayout-->
-<!--            android:id="@+id/linearlayout_title"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintRight_toRightOf="parent"-->
-<!--            app:layout_constraintBottom_toTopOf="@id/recyclerview_vignette"-->
-<!--            android:paddingTop="20dp"-->
-<!--            android:paddingBottom="20dp"-->
-<!--            >-->
-
-
-<!--            <TextView-->
-<!--                android:id="@+id/title"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Autópálya matricák"-->
-<!--                android:gravity="center"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textSize="24dp">-->
-
-<!--            </TextView>-->
-
-<!--        </LinearLayout>-->
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/recyclerview_vignette"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintRight_toRightOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/linearlayout_title"-->
-<!--            >-->
-
-<!--        </androidx.recyclerview.widget.RecyclerView>-->
-
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
 
 
-
+    <TextView
+        android:id="@+id/text_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:text="Üres" />
 
 
 </FrameLayout>
